--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -14,7 +14,7 @@
         <% end %>
       </div>
     </div>
-    <div class="bg-dark text-white p-lg-8 rounded-l mb-10">
+    <div class="bg-dark text-white p-5 p-lg-8 rounded-l mb-10">
       <div class="">
         <h2 class="mb-4">Co je Demagog.cz?</h2>
         <div class="fs-6 mb-10">
@@ -45,17 +45,17 @@
           <h2 class="fs-2">Podpořte Demagog.cz</h2>
           <p class="fs-6">Fungujeme díky podpoře od&nbsp;čtenářů, jako jste vy.</p>
         </div>
-        <div class="">
-          <div data-darujme-widget-token="vhm7bzesjyb2jbdy">&nbsp;</div>
+        <div class="d-flex justify-content-center">
+          <div data-darujme-widget-token="rfq62o07d045bw95">&nbsp;</div>
           <script type="text/javascript">
-            +function(w, d, s, u, a, b) {
-              w['DarujmeObject'] = u;
-              w[u] = w[u] || function () { (w[u].q = w[u].q || []).push(arguments) };
-              a = d.createElement(s); b = d.getElementsByTagName(s)[0];
-              a.async = 1; a.src = "https:\/\/www.darujme.cz\/assets\/scripts\/widget.js";
-              b.parentNode.insertBefore(a, b);
-            }(window, document, 'script', 'Darujme');
-            Darujme(1, "vhm7bzesjyb2jbdy", 'render', "https:\/\/www.darujme.cz\/widget?token=vhm7bzesjyb2jbdy", "100%");
+          	+function(w, d, s, u, a, b) {
+          		w['DarujmeObject'] = u;
+          		w[u] = w[u] || function () { (w[u].q = w[u].q || []).push(arguments) };
+          		a = d.createElement(s); b = d.getElementsByTagName(s)[0];
+          		a.async = 1; a.src = "https:\/\/www.darujme.cz\/assets\/scripts\/widget.js";
+          		b.parentNode.insertBefore(a, b);
+          	}(window, document, 'script', 'Darujme');
+          	Darujme(1, "rfq62o07d045bw95", 'render', "https:\/\/www.darujme.cz\/widget?token=rfq62o07d045bw95", "270px");
           </script>
         </div>
       </div>
