--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,16 +35,16 @@
             <p class="fs-6">Fungujeme díky podpoře od&nbsp;čtenářů, jako jste vy.</p>
           </div>
           <div class="donate d-flex justify-content-center">
-            <div data-darujme-widget-token="vhm7bzesjyb2jbdy">&nbsp;</div>
+            <div data-darujme-widget-token="2lxybp84z777gdff">&nbsp;</div>
             <script type="text/javascript">
-              +function(w, d, s, u, a, b) {
-                w['DarujmeObject'] = u;
-                w[u] = w[u] || function () { (w[u].q = w[u].q || []).push(arguments) };
-                a = d.createElement(s); b = d.getElementsByTagName(s)[0];
-                a.async = 1; a.src = "https:\/\/www.darujme.cz\/assets\/scripts\/widget.js";
-                b.parentNode.insertBefore(a, b);
-              }(window, document, 'script', 'Darujme');
-              Darujme(1, "vhm7bzesjyb2jbdy", 'render', "https:\/\/www.darujme.cz\/widget?token=vhm7bzesjyb2jbdy", "100%");
+            	+function(w, d, s, u, a, b) {
+            		w['DarujmeObject'] = u;
+            		w[u] = w[u] || function () { (w[u].q = w[u].q || []).push(arguments) };
+            		a = d.createElement(s); b = d.getElementsByTagName(s)[0];
+            		a.async = 1; a.src = "https:\/\/www.darujme.cz\/assets\/scripts\/widget.js";
+            		b.parentNode.insertBefore(a, b);
+            	}(window, document, 'script', 'Darujme');
+            	Darujme(1, "2lxybp84z777gdff", 'render', "https:\/\/www.darujme.cz\/widget?token=2lxybp84z777gdff", "270px");
             </script>
           </div>
         </div>
