--- a/app/assets/stylesheets/core/_header.scss
+++ b/app/assets/stylesheets/core/_header.scss
@@ -7,13 +7,13 @@
   z-index: 55;
   //box-shadow: $header-shadow;
 
-  &.hide-header {
-    transform: translateY(-100%);
-  }
+
 
   .header-content {
     position: relative;
     border-radius: 35px;
+    transition: border-radius $base-transition;
+    box-shadow: 0 0 0 1px rgba($white, 0.05), 0 10px 15px 0 rgba($white, 0.05);
   }
 
   &.on-scroll {
@@ -21,6 +21,16 @@
     .header-content {
       border-top-left-radius: 0;
       border-top-right-radius: 0;
+      //box-shadow: 0 20px 20px 0 rgba(0,0,0,0.45);
+      //box-shadow: 10px 10px 10px rgba($light, 0.25);
+
+    }
+  }
+
+  &.hide-header {
+    transform: translateY(-100%);
+    .header-content {
+      box-shadow: 0 0 0 0 rgba($light,0.15);
     }
   }
 
@@ -43,7 +53,7 @@
       left: 0;
       width: 100%;
       padding-top: 35px;
-      box-shadow: 0 0 15px 0 rgba(0,0,0,0.5);
+      //box-shadow: 0 0 15px 0 rgba(0,0,0,0.5);
 
       ::before {
         position: absolute;
@@ -63,6 +73,7 @@
       }
       &.open {
         display: block !important;
+        box-shadow: 0 0 0 1px rgba($white, 0.05), 0 10px 15px 0 rgba($white, 0.05);
       }
 
     }
@@ -101,10 +112,11 @@
         content: "";
         width: 100%;
         height: 100%;
-        background: #172032;
+        background: $dark-light;
         border-bottom-left-radius: 35px;
         border-bottom-right-radius: 35px;
         z-index: -1;
+        box-shadow: 0 0 0 1px rgba($white, 0.05), 0 10px 15px 0 rgba($white, 0.05);
       }
 
       .dropmenu-wrap {
