--- a/app/views/statement/_detail.html.erb
+++ b/app/views/statement/_detail.html.erb
@@ -110,9 +110,11 @@
           </p>
         </div>
         <div class="accordion-content close" data-target="components--accordion.content">
-          <p class="fs-6">
-            <%= raw(statement.approved_assessment.explanation_html) %>
-          </p>
+          <div class="scroll-vertical mh-400px">
+            <p class="fs-6">
+              <%= raw(statement.approved_assessment.explanation_html) %>
+            </p>
+          </div>
         </div>
         <div class="d-flex justify-content-between align-items-center w-100">
           <a
