--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -6,12 +6,12 @@
       <div class="row g-5 g-lg-10">
         <div class="col col-12 col-lg-7">
           <div class="bg-secondary min-h-100 rounded-l p-5 p-lg-10">
-            <h2 class="small text-uppercase mb-2">Zůstaňte v kontaktu</h2>
+            <h2 class="display-5 fw-bold mb-5">Zůstaňte v kontaktu</h2>
             <p class="fs-2 mb-4">
               Každých pár týdnů posíláme newsletter se shrnutím naší práce a zajímavostmi ze zákulisí.
             </p>
             <form class="subscribe-to-newsletter-form" action="https://demagog.us4.list-manage.com/subscribe/post" method="POST">
-              <div class="d-flex flex-wrap">
+              <div class="d-flex flex-wrap flex-lg-nowrap">
                 <div class="w-100 me-4">
                   <input type="hidden" name="u" value="55104956ab8c4db41d4cd7e55">
                   <input type="hidden" name="id" value="f2c56d2e38">
@@ -29,7 +29,7 @@
         </div>
         <div class="col col-12 col-lg-5">
           <div class="bg-primary min-h-100 rounded-l p-5 p-lg-10">
-            <h2 class="small text-uppercase mb-2">Sociální sítě</h2>
+            <h2 class="display-5 fw-bold mb-5 text-white">Sociální sítě</h2>
             <p class="fs-2">
               Nenechte si ujít nejnovější události z Demagog.cz. Sdílením našich příspěvku přátelům podpodpoříte naši práci.
             </p>
