--- a/app/views/speaker/show.html.erb
+++ b/app/views/speaker/show.html.erb
@@ -34,8 +34,8 @@ content_for(
         </div>
       </div>
     </div>
-    <div class="col col-12 col-md-6 col-lg-4">
-      <div class="d-flex justify-content-end">
+    <div class="col col-12 col-md-6 col-lg-4 d-flex justify-content-end">
+      <div class="d-flex mw-350px w-100">
         <div class="me-5">
           <div class="d-flex align-items-center mb-2">
             <span class="w-40px h-40px d-flex align-items-center justify-content-center bg-primary rounded-circle me-2">
