--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -43,7 +43,7 @@
         </div>
         <div class="mt-5">
           <p class="fs-5 mb-4">Upozorněte nás, když narazíte na nepravdivý obsah na sociálních sítích!</p>
-          <a href="#" class="btn bg-secondary w-100">
+          <a href="/stranka/workshopy-demagogcz" class="btn bg-secondary w-100">
             <span class="text-dark">Upozornit</span>
           </a>
         </div>
