--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -33,8 +33,8 @@
             <p class="fs-2">
               Nenechte si ujít nejnovější události z Demagog.cz. Sdílením našich příspěvku přátelům podpodpoříte naši práci.
             </p>
-            <div class="d-flex mt-4">
-              <a class="btn white me-4 ps-2" href="https://www.facebook.com/Demagog.CZ">
+            <div class="d-flex flex-wrap mt-4">
+              <a class="btn white me-4 mb-2 ps-2" href="https://www.facebook.com/Demagog.CZ">
                 <span class="w-30px h-30px me-2">
                   <svg width="100%" height="100%" viewBox="0 0 28 28" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                     <g transform="matrix(1,0,0,1,-0.106344,-0.009432)">
@@ -44,7 +44,13 @@
                 </span>
                 <span class="fw-bolder">Facebook</span>
               </a>
-              <a class="btn white ps-2" href="https://twitter.com/DemagogCZ">
+              <a class="btn white ps-2 me-4 mb-2 ps-2" href="https://www.instagram.com/demagog.cz/">
+                <span class="w-30px h-30px me-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="100%" height="100%"><path d="M 15 2 C 7.832 2 2 7.832 2 15 C 2 22.168 7.832 28 15 28 C 22.168 28 28 22.168 28 15 C 28 7.832 22.168 2 15 2 z M 11.666016 6 L 18.332031 6 C 21.457031 6 24 8.5420156 24 11.666016 L 24 18.332031 C 24 21.457031 21.457984 24 18.333984 24 L 11.667969 24 C 8.5429688 24 6 21.457984 6 18.333984 L 6 11.667969 C 6 8.5429688 8.5420156 6 11.666016 6 z M 11.666016 8 C 9.6450156 8 8 9.6459688 8 11.667969 L 8 18.333984 C 8 20.354984 9.6459688 22 11.667969 22 L 18.333984 22 C 20.354984 22 22 20.354031 22 18.332031 L 22 11.666016 C 22 9.6450156 20.354031 8 18.332031 8 L 11.666016 8 z M 19.667969 9.6660156 C 20.035969 9.6660156 20.333984 9.9640312 20.333984 10.332031 C 20.333984 10.700031 20.035969 11 19.667969 11 C 19.299969 11 19 10.700031 19 10.332031 C 19 9.9640312 19.299969 9.6660156 19.667969 9.6660156 z M 15 10 C 17.757 10 20 12.243 20 15 C 20 17.757 17.757 20 15 20 C 12.243 20 10 17.757 10 15 C 10 12.243 12.243 10 15 10 z M 15 12 A 3 3 0 0 0 15 18 A 3 3 0 0 0 15 12 z"/></svg>
+                </span>
+                <span class="fw-bolder">Instagram</span>
+              </a>
+              <a class="btn white ps-2 mb-2" href="https://twitter.com/DemagogCZ">
                 <span class="w-30px h-30px me-2">
                   <svg width="100%" height="100%" viewBox="0 0 28 28" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                     <g transform="matrix(1,0,0,1,0.58935,0.158668)">
@@ -55,6 +61,7 @@
                 <span class="fw-bolder">Twitter</span>
 
               </a>
+
             </div>
           </div>
         </div>
@@ -72,7 +79,7 @@
           <h4 class="fs-5 mb-4">Kontakty</h4>
           <div class="mb-4">
             <h6 class="small">Kontaktní osoba</h6>
-            <p class="small">Petr Gondgala | koordinátor projektu</p>
+            <p class="small">Petr Gongala | koordinátor projektu</p>
             <p class="small">
               <a class="text-white" href="mailto:petr.gongala@demagog.cz">petr.gongala@demagog.cz</a>
             </p>
@@ -106,7 +113,7 @@
           <div class="d-flex">
             <div class="mw-100px w-100 me-5">
               <a href="https://fb.me/Third-Party-Fact-Checking" target="_blank">
-                <img class="mw-100 w-100" loading="lazy" src="<%= asset_path("partners/facebook-factchecking-partner.png") %>" alt="Badge of independent third-party facth-checking partner of Facebook" />
+                <img class="mw-100 w-100" loading="lazy" src="<%= asset_path("partners/Digital_Badge_Fact-Checkers_FOR_DARK_BACKGROUND.png") %>" alt="Badge of independent third-party facth-checking partner of Facebook" />
               </a>
             </div>
             <div>
