--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -31,7 +31,7 @@
           <div class="bg-primary min-h-100 rounded-l p-5 p-lg-10">
             <h2 class="display-5 fw-bold mb-5 text-white">Sociální sítě</h2>
             <p class="fs-2">
-              Nenechte si ujít nejnovější události z Demagog.cz. Sdílením našich příspěvku přátelům podpodpoříte naši práci.
+              Nenechte si ujít nejnovější události z Demagog.cz. Sdílením našich příspěvku přátelům podpoříte naši práci.
             </p>
             <div class="d-flex flex-wrap mt-4">
               <a class="btn white me-4 mb-2 ps-2" href="https://www.facebook.com/Demagog.CZ">
@@ -71,7 +71,7 @@
       <div class="row g-5">
         <div class="col col-12 col-md-6 col-lg-4">
           <h4 class="fs-5 mb-4">Demagog.cz, z.s</h4>
-          <p class="small mb-4">IČ: 05 14 05 44 <br>se sídlem Roháčova 145/14<br>Žižkov, 130 00 Praha 3</p>
+          <p class="small mb-4">IČO: 05 14 05 44 <br>se sídlem Roháčova 145/14<br>Žižkov, 130 00 Praha 3</p>
           <p class="small mb-4">Zapsaný ve spolkovém rejstříku u Městského soudu v Praze.</p>
           <p class="small mb-4">Demagog.cz má <a class="text-white" href="https://www.rb.cz/povinne-zverejnovane-informace/transparentni-ucty?mvcPath=transactions&accountNumber=9711283001&path=transactions">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
         </div>
@@ -94,7 +94,7 @@
           <div class="">
             <h6 class="small">Pro média</h6>
             <p class="small">
-              <a class="text-white" href="#">Loga ke stažení</a>
+              <a class="text-white" href="https://demagogcz-uloziste.fra1.digitaloceanspaces.com/Demagog.cz%20logo.zip">Loga ke stažení</a>
             </p>
           </div>
 
