--- a/app/views/statement/_elastic_filterable_list.html.erb
+++ b/app/views/statement/_elastic_filterable_list.html.erb
@@ -20,7 +20,7 @@ wide_display = true if local_assigns[:wide_display].nil?
 >
   <div class="col col-12 col-lg-4">
     <a class="btn w-100" data-action="click->components--filter#toggle" aria-show="true">
-      <span class="text-white" data-target="components--filter.label">Skrýt filtry</span>
+      <span class="text-white" data-target="components--filter.label">Zobrazit filtry</span>
     </a>
   </div>
   <div class="col col-12 col-lg-8">
