--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -8,9 +8,9 @@
 >
   <h2 class="fs-1 fw-bold"><%= @all.size %> sledovaných slibů</h2>
   <div class="">
-    <div class="d-flex my-10">
+    <div class="d-flex flex-wrap my-10">
       <% @promise_rating_keys.each do |promise_rating_key| %>
-        <div class="d-flex flex-wrap align-items-center me-10">
+        <div class="d-flex flex-wrap align-items-center me-5 me-lg-10 py-2">
           <% if promise_rating_key == "fulfilled" %>
             <span class="w-30px h-30px d-flex align-items-center justify-content-center bg-primary rounded-circle me-2">
               <svg width="17" height="13" viewBox="0 0 17 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -59,7 +59,7 @@
         </div>
       <% end %>
     </div>
-    <div class="d-flex rounded-pill overflow-hidden h-30px">
+    <div class="d-none d-md-flex rounded-pill overflow-hidden h-30px">
       <% @promise_rating_keys.each do |promise_rating_key| %>
         <div class="" style="width: <%= @promise_rating_percents[promise_rating_key] %>%">
           <span class="d-block h-100 mb-4 <%= (
@@ -78,7 +78,7 @@
         </div>
       <% end %>
     </div>
-    <div class="d-flex mt-5">
+    <div class="d-none d-md-flex mt-5">
       <% @promise_rating_keys.each do |promise_rating_key| %>
         <div class="" style="width: <%= @promise_rating_percents[promise_rating_key] %>%">
           <span class="fs-4 fw-bold  <%= @promise_rating_percents[promise_rating_key] %>%">
