--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -49,7 +49,7 @@
     <% unless @statement.approved_assessment.short_explanation.nil? %>
     <div class="separator bg-gray mb-10"></div>
     <div class="mb-10">
-      <h3 class="display-5 fw-bold mb-5">Skrácené odůvodnění</h3>
+      <h3 class="display-5 fw-bold mb-5">Zkrácené odůvodnění</h3>
       <p class="fs-5"><%= @statement.approved_assessment.short_explanation %></p>
     </div>
     <% end %>
