--- a/app/assets/stylesheets/core/_utilities.scss
+++ b/app/assets/stylesheets/core/_utilities.scss
@@ -192,6 +192,11 @@ $utilities: map-merge(
         )
       )
     ),
+    "fill": (
+      property: fill,
+      class: fill,
+      values: $theme-colors
+    ),
     "background-color": (
       property: background-color,
       class: bg,
