--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -21,7 +21,7 @@
                   </div>
                 </div>
                 <div class="min-w-150px mt-5 mt-lg-0">
-                  <button type="submit" class="btn w-100">Začít odebírat</button>
+                  <button type="submit" class="btn w-100 h-44px">Začít odebírat</button>
                 </div>
               </div>
             </form>
