--- a/app/views/components/_tags.html.erb
+++ b/app/views/components/_tags.html.erb
@@ -2,7 +2,7 @@
 @tags= [
   Struct::NavLink.new('Diskuze', '/diskuze'),
   Struct::NavLink.new('Sociální sítě', '/socialni-site'),
-  Struct::NavLink.new('Factchech pro facebook', '/spoluprace-s-facebookem'),
+  Struct::NavLink.new('Fact-check pro facebook', '/spoluprace-s-facebookem'),
 ]
 %>
 
