--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -223,8 +223,14 @@
           </div>
         </div>
         <% @all.each do |statement| %>
-        <div class="separator bg-gray"></div>
-        <div class="accordion w-100" id="slib-<%= statement.id %>" data-target="components--overview.item">
+
+        <div
+          class="accordion w-100" id="slib-<%= statement.id %>"
+          data-target="components--overview.item components--filter.filterItem"
+          data-filter-value="<%= statement.tags[0].id %>,<%= statement.assessment.promise_rating.key %>"
+
+        >
+          <div class="separator bg-gray"></div>
           <div class="row g-3 g-lf-6 py-2 align-items-center">
             <div class="col col-12 col-lg-5">
               <span class="fs-6 fw-bold"><%= statement.title %></span>
